# gr4-control-plane

./: .dockerignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
docs/: design.md
include/gr4cp/api/: http_server.hpp
include/gr4cp/app/: block_catalog_service.hpp  block_settings_service.hpp  scheduler_catalog_service.hpp  session_service.hpp
include/gr4cp/catalog/: block_catalog_provider.hpp  gr4_block_catalog_provider.hpp  gr4_block_catalog_provider_detail.hpp  gr4_scheduler_catalog_provider.hpp  scheduler_catalog_provider.hpp  static_block_catalog_provider.hpp
include/gr4cp/cli/: cli.hpp
include/gr4cp/domain/: block_catalog.hpp  scheduler_catalog.hpp  session.hpp
include/gr4cp/runtime/: block_settings.hpp  gr4_runtime_manager.hpp  runtime_manager.hpp  stub_runtime_manager.hpp
include/gr4cp/storage/: in_memory_session_repository.hpp  session_repository.hpp
scripts/: build-images.sh
src/: cli_main.cpp  main.cpp
src/api/: http_server.cpp
src/app/: block_catalog_service.cpp  block_settings_service.cpp  scheduler_catalog_service.cpp  session_service.cpp
src/catalog/: gr4_block_catalog_provider.cpp  gr4_scheduler_catalog_provider.cpp  static_block_catalog_provider.cpp
src/cli/: cli.cpp
src/domain/: block_catalog.cpp  scheduler_catalog.cpp  session.cpp
src/runtime/: gr4_runtime_manager.cpp  stub_runtime_manager.cpp
src/storage/: in_memory_session_repository.cpp
test/: block_catalog_service_test.cpp  block_settings_service_test.cpp  cli_test.cpp  gr4_block_catalog_provider_test.cpp  gr4_runtime_manager_test.cpp  healthz_smoke_test.cpp  http_api_test.cpp  scheduler_catalog_service_test.cpp  session_service_test.cpp
